--- a/src/components/Header.sass
+++ b/src/components/Header.sass
@@ -4,7 +4,7 @@ header
     display: flex
     justify-content: center
     align-items: center
-    margin: 150px 0 50px 0
+    margin-bottom: 25px
 
     h1
         position: relative
