--- a/src/index.sass
+++ b/src/index.sass
@@ -8,10 +8,10 @@
 
 
 body 
+    height: 100vh
     color: white
     background: black
     display: flex
     justify-content: center
     flex-direction: column
     align-items: center
-
