--- a/src/index.sass
+++ b/src/index.sass
@@ -1,17 +1,5 @@
-*
-    margin: 0
-    padding: 0
-    outline: 0
-    border: 0
-    list-style: none
-    text-decoration: none
+@import url("https://fonts.googleapis.com/css?family=Exo+2&display=swap&text=ATKNERMİŞ")
 
-
-body 
-    height: 100vh
-    color: white
-    background: black
-    display: flex
-    justify-content: center
-    flex-direction: column
-    align-items: center
+@import "./sass/Header.sass"
+@import "./sass/Main.sass"
+@import "./sass/global.sass"
