--- a/src/sass/Main.sass
+++ b/src/sass/Main.sass
@@ -1,5 +1,3 @@
-@import 'partials/font'
-
 main
     ul
         display: flex
@@ -18,10 +16,17 @@ main
         background: black
         transition: 250ms background
         
+        a
+            width: 100%
+            height: 100%
+            display: block
+            border-radius: 50%
+
         &:hover
             background: white
             a
                 color: black
+                
 
     .social_link
         font-size: 25px
